--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<title>Xizhi Tan</title>
+<title>Grigoris Velegkas</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="canonical" href="https://xizhitan.github.io/">
+<link rel="canonical" href="https://gvelegkas.github.io/">
 <link rel="stylesheet" href="css/frame.css">
 <script src="https://kit.fontawesome.com/64d559dd08.js" crossorigin="anonymous"></script>
 
 <header>
-  <a href="/" class="title"><font size="+2">Xizhi Tan</font></a>
+  <a href="/" class="title"><font size="+2">Grigoris Velegkas</font></a>
 
   <div>
     <nav><a href="Xizhi_Tan.pdf" >CV</a></nav>
@@ -21,124 +21,144 @@
    <img src=
 "xizhitan.jpeg" 
          width="230" height="235"
-         img style="float: right; padding-left: 50px;">Hi! I'm a fourth-year PhD student in the <a href="https://drexel.edu/cci/academics/computer-science-department/">Computer Science</a> department at Drexel University and a member of <a href="https://econcs.cci.drexel.edu/">Drexel EconCS research group</a>. My advisor is <a href="https://www.cs.drexel.edu/~gkatz/index.html">Vasilis Gkatzelis</a>. I am interested in the intersection of Economics and Computer Science, particularly
-in algorithmic game theory, mechanism design and fair division.  I was a Research Intern at Google Mountain View during summer 2023.
+         img style="float: right; padding-left: 50px;">Hello! I am a fifth yeah PhD student in the <a href="https://cpsc.yale.edu">Computer Science</a> department at Yale University. My advisor is <a href="https://aminkarbasi.github.io">Amin Karbasi</a>. 
+ My research focuses on learning theory and mechanism design. In summer 2023, I was a research intern at Google Research in Mountain View, hosted by
+ <a href="https://www.gsb.stanford.edu/programs/phd/academic-experience/students/andres-perlroth-vitriol">Andres Perlroth</a> and  <a href="https://research.google/people/gagan-aggarwal/">Gagan Aggarwal</a>.
+  Currently, I am a student researcher at Google Research hosted by <a href="https://sites.google.com/view/yuandeng">Yuan Deng</a>.
 
-<p> I received my bachelor's degree from Drexel University, majoring in Mathematics. During my undergraduate years, I have worked as assistant product
- manager in Comcast and Digital Quality Operations Analyst in JPMorgan Chase & Co.
+<p> Before coming to Yale, I completed my undergrad studies at NTUA majoring in computer science and electrical engineering, where I worked with 
+  <a href="http://www.softlab.ntua.gr/~fotakis/">Dimitris Fotakis</a>.
 </p>
 
-<p>email: xizhi AT drexel DOT edu</p>
+<p>email: grigoris.velegkas AT yale DOT edu</p>
 
-<h1>Journal Publication</h1>
-  <ul>
-    <li><b>Learning-Augmented Mechanism Design: Leveraging Predictions for Facility Location</b> </li>
-    <li style="list-style-type:none">Priyank Agrawal, Eric Balkanski, Vasilis Gkatzelis, Tingting Ou, Xizhi Tan</li>
-    <li style="list-style-type:none"><a href="https://pubsonline.informs.org/doi/abs/10.1287/moor.2022.0225"><b>Mathematics of Operations Research</b></a></li>
-  </ul>
 
 <h1>Conference Publications</h1>
-Authors are listed in alphabetical order.
+Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
-    <li> <b>Online Mechanism Design with Predictions</b></li>
-  <li style="list-style-type:none">Eric Balkanski, Vasilis Gkatzelis, Xizhi Tan, Cherlin Zhu</li>
+    <li> <b>Replicable Learning of Large-Margin Halfspaces</b></li>
+  <li style="list-style-type:none">Alkis Kalavasis, Amin Karbasi, Kasper Green Larsen, Grigoris Velegkas, Felix Zhou</li>
   <li style="list-style-type:none"> 
     [<b>Preprint</b>] 
-    [<a href="https://arxiv.org/pdf/2310.02879.pdf">Arxiv</a>]
+    [<a href="https://arxiv.org/abs/2402.13857">Arxiv</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
   
-  <li> <b>Optimal Metric Distortion with Predictions</b></li>
-  <li style="list-style-type:none">Ben Berger, Michal Feldman, Vasilis Gkatzelis, Xizhi Tan</li>
-  <li style="list-style-type:none"> 
-    [<b>Preprint</b>] 
-    [<a href="https://arxiv.org/pdf/2307.07495.pdf">Arxiv</a>]
-  </li>
-  <li style="list-style-type:none">&nbsp;</li>
-  
-  <li> <b>Getting More by Knowing Less: Bayesian Incentive Compatible Mechanisms for Fair Division</b></li>
-  <li style="list-style-type:none">Vasilis Gkatzelis, Alexandros Psomas, Xizhi Tan, Paritosh Verma</li>
-  <li style="list-style-type:none"> 
-    [<b>Preprint</b>] 
-    [<a href="https://arxiv.org/pdf/2306.02040.pdf">Arxiv</a>]
-  </li>
-  <li style="list-style-type:none">&nbsp;</li>
-
-      <li> <b>Extracting Small Subgraphs in Road Networks</b></li>
-  <li style="list-style-type:none">Sara Ahmadian, Sreenivas Gollapudi, Greg Hutchins, Kostas Kollias,  Xizhi Tan</li>
+  <li> <b>User Response in Ad Auctions: An MDP Formulation of Long-term Revenue Optimization</b></li>
+  <li style="list-style-type:none">Yang Cai, Zhe Feng, Christopher Liaw, Aranyak Mehta, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
     [<b>WWW 2024</b>] 
   </li>
   <li style="list-style-type:none">&nbsp;</li>
   
-  <li> <b>EFx Budget-Feasible Allocations with High Nash Welfare</b></li>
-  <li style="list-style-type:none">Marius Garbea, Vasilis Gkatzelis, Xizhi Tan</li>
+  <li> <b>Optimal Learners for Realizable Regression:
+PAC Learning and Online Learning</b></li>
+  <li style="list-style-type:none">Idan Attias, Steve Hanneke, Alkis Kalavasis, Amin Karbasi, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
-    [<a href="https://ebooks.iospress.nl/volumearticle/64278"><b>ECAI 2023</b></a>] 
-    [<a href="https://arxiv.org/pdf/2305.02280.pdf">Arxiv</a>]
+    [<b>NeurIPS 2023 (Oral Presentation)</b>] 
+    [<a href="https://arxiv.org/abs/2307.03848">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+  <li> <b>Replicable Clustering</b></li>
+  <li style="list-style-type:none">Hossein Esfandiari, Amin Karbasi, Vahab Mirrokni, Grigoris Velegkas, Felix Zhou</li>
+  <li style="list-style-type:none"> 
+    [<b>NeurIPS 2023</b>] 
+    [<a href="https://arxiv.org/abs/2302.10359">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+  <li> <b>Replicability in Reinforcement Learning</b></li>
+  <li style="list-style-type:none">Amin Karbasi, Grigoris Velegkas, Lin F. Yang, Felix Zhou</li>
+  <li style="list-style-type:none"> 
+    [<b>NeurIPS 2023</b>] 
+    [<a href="https://arxiv.org/abs/2305.19562">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+  <li> <b>Statistical Indistinguishability of Learning Algorithms</b></li>
+  <li style="list-style-type:none">Alkis Kalavasis, Amin Karbasi, Shay Moran, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>ICML 2023</b>] 
+    [<a href="https://arxiv.org/abs/2305.14311">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+  <li> <b>Replicable Bandits</b></li>
+  <li style="list-style-type:none">Hossein Esfandiari, Alkis Kalavasis, Amin Karbasi, Andreas Krause, Vahab Mirrokni, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>ICLR 2023</b>] 
+    [<a href="https://arxiv.org/abs/2210.01898">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+  <li> <b>Universal Rates for Interactive Learning</b></li>
+  <li style="list-style-type:none">Steve Hanneke, Amin Karbasi, Shay Moran, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>NeurIPS 2022 (Oral Presentation)</b>] 
+    [<a href="https://proceedings.neurips.cc/paper_files/paper/2022/file/b8362385b08348d21162310c5b4e9541-Paper-Conference.pdf">NeurIPS Proceedings</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+  <li> <b>Multiclass Learnability Beyond the PAC Framework:
+Universal Rates and Partial Concept Classes</b></li>
+  <li style="list-style-type:none">Alkis Kalavasis(*), Grigoris Velegkas(*), Amin Karbasi</li>
+  <li style="list-style-type:none"> 
+    [<b>NeurIPS 2022</b>] 
+    [<a href="https://arxiv.org/abs/2210.02297">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+      <li> <b>Reinforcement Learning with Logarithmic Regret
+and Policy Switches</b></li>
+  <li style="list-style-type:none">Grigoris Velegkas(*), Zhuoran Yang, Amin Karbasi</li>
+  <li style="list-style-type:none"> 
+    [<b>NeurIPS 2022</b>] 
+    [<a href="https://proceedings.neurips.cc/paper_files/paper/2022/file/ea318cbc405c9803925e188e5d6836c6-Paper-Conference.pdf">NeurIPS Proceedings</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
   
-  <li> <b>Strategyproof Scheduling with Predictions</b></li>
-  <li style="list-style-type:none">Eric Balkanski, Vasilis Gkatzelis, Xizhi Tan</li>
+<li> <b>Is Selling Complete Information (Approximately) Optimal?</b></li>
+  <li style="list-style-type:none">Dirk Bergemann, Yang Cai, Grigoris Velegkas, Mingfei Zhao</li>
   <li style="list-style-type:none"> 
-    [<a href="https://drops.dagstuhl.de/opus/volltexte/2023/17514/pdf/LIPIcs-ITCS-2023-11.pdf"><b>ITCS 2023</b></a>] 
-    [<a href="https://arxiv.org/pdf/2209.04058.pdf">Arxiv</a>] 
-    [<a href="https://www.youtube.com/watch?v=POBOLMVIXnE&ab_channel=SimonsInstitute">Presentation (25 mins)</a>]
+    [<b>EC 2022</b>] 
+    [<a href="https://arxiv.org/abs/2202.09013">Arxiv</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
-  
-  <li><b>Learning-Augmented Mechanism Design: Leveraging Predictions for Facility Location</b> </li>
-  <li style="list-style-type:none">Priyank Agrawal, Eric Balkanski, Vasilis Gkatzelis, Tingting Ou, Xizhi Tan</li>
+</ul>
+
+  <li> <b>An Efficient &epsilon;-BIC to BIC Transformation and Its Application to Black-Box Reduction in Revenue Maximization</b></li>
+  <li style="list-style-type:none">Yang Cai, Argyris Oikonomou, Grigoris Velegkas, Mingfei Zhao</li>
   <li style="list-style-type:none"> 
-   <meta charset="U+1F4C1"> [<a href="https://dl.acm.org/doi/10.1145/3490486.3538306"><b>EC 2022</b></a>] 
-    [<a href="https://arxiv.org/pdf/2204.01120.pdf">Arxiv</a>] 
-    [<a href="https://www.youtube.com/watch?v=fa1Pu4f7u9M">Presentation (20 mins)</a>]
+    [<b>SODA 2021</b>] 
+    [<a href="https://arxiv.org/abs/1911.10172">Arxiv</a>]
   </li>
-   <li style="list-style-type:none">&nbsp;</li>
- 
-  <li><b>Improved Price of Anarchy via Predictions</b></li>
-  <li style="list-style-type:none">Vasilis Gkatzelis, Kostas Kollias, Alkmini Sgouritsa, Xizhi Tan</li>
+  <li style="list-style-type:none">&nbsp;</li>
+</ul>
+
+  <li> <b>How to Sell Information Optimally: an Algorithmic Study</b></li>
+  <li style="list-style-type:none">Yang Cai, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
-    [<a href="https://dl.acm.org/doi/10.1145/3490486.3538296"><b>EC 2022</b></a>] 
-    [<a href="https://arxiv.org/pdf/2205.04252.pdf">Arxiv</a>] 
-    [<a href="https://www.youtube.com/watch?v=2Kn6kOvxbXwe">Presentation (20 mins)</a>]
+    [<b>ITCS 2021</b>] 
+    [<a href="https://arxiv.org/abs/2011.14570">Arxiv</a>]
   </li>
-   <li style="list-style-type:none">&nbsp;</li>
- 
-  <li><b>Deterministic Budget-Feasible Clock Auctions</b></li>
-  <li style="list-style-type:none">Eric Balkanski, Pranav Garimidi, Vasilis Gkatzelis, Daniel Schoepflin, Xizhi Tan</li>
-  <li style="list-style-type:none"> 
-    [<a href="https://epubs.siam.org/doi/10.1137/1.9781611977073.114"><b>SODA 2022</b></a>] 
-    [<a href="https://arxiv.org/pdf/2107.09239.pdf">Arxiv</a>] 
-  </li>
-    <li style="list-style-type:none">&nbsp;</li>
- 
-  <li><b>Fair and Efficient Online Allocations with Normalized Valuations</b></li>
-  <li style="list-style-type:none">Vasilis Gkatzelis, Alexandros Psomas, Xizhi Tan</li>
-  <li style="list-style-type:none"> 
-    [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/16685"><b>AAAI 2021</b></a>] 
-    [<a href="https://arxiv.org/pdf/2009.12405.pdf">Arxiv</a>] 
-    [<a href="https://slideslive.com/38948677/fair-and-efficient-online-allocation-with-normalized-valuations">Presentation (18 mins)</a>]
-  </li>
+  <li style="list-style-type:none">&nbsp;</li>
 </ul>
  
-<h1>Teaching</h1>
+<!-- <h1>Teaching</h1>
 <ul>
  <li>Teaching Assistant for CS 521: Data Structures and Algorithms I (Graduate) (Fall 2022)</li>
  <li>Teaching Assistant for CS 457: Data Structures and Algorithms I (Fall 2020, 2021, 2023)</li>
  <li>Teaching Assistant for CS 380: Artificial Intelligence (Spring 2020)</li>
  <li>Tutor at Drexel Math Resource Center (2018-2020)</li>
-</ul>
+</ul> -->
 
 <h1>Awards</h1>
 <ul>
- <li>Finalist for 2023 Meta Research PhD Fellowship, Meta</li>
- <li>Jay Modi Memorial Award, Drexel University</li>
- <li>PhD Research Excellence, Drexel University</li>
- <li>Student Teaching Excellence (GR), Drexel University</li>
- <li>Robert J Bickel Endowed Scholarship, Drexel University</li>
- <li>William Avery Scholarship, Drexel University</li>
+ <li>Onassis Foundation Scholarship for Academic Excellence, 2020-2024</li>
+ <li>Bodossaki Foundation Scholarship for Academic Excellence, 2020-2024</li>
+ <li>Gerondelis Foundation Scholarship for Academic Excellence, 2019-2020</li>
+ <li>Eurobank ``A great moment for education'' Award, 2013</li>
  </ul>
 
 
@@ -150,9 +170,9 @@ Authors are listed in alphabetical order.
   <nav><img src="drexel_1.png" width="170"></nav>
   
   <nav>
-      <a href="https://scholar.google.com/citations?user=XcmsNHEAAAAJ&hl=en"><i class="fa-brands fa-google"></i></a>
-      <a href="https://www.linkedin.com/in/xizhi-tan/"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="mailto:xt52@drexel.edu"><i class="fa-regular fa-envelope"></i></a>
+      <a href="https://scholar.google.com/citations?user=Ty1kgP0AAAAJ&hl=en"><i class="fa-brands fa-google"></i></a>
+      <a href="https://www.linkedin.com/in/grigoris-velegkas-541b8910a/"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="mailto:grigoris.velegkas@yale.edu"><i class="fa-regular fa-envelope"></i></a>
       
   </nav>
 </footer>
