--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ and Policy Switches</b></li>
  <li>Onassis Foundation Scholarship for Academic Excellence, 2020-2024</li>
  <li>Bodossaki Foundation Scholarship for Academic Excellence, 2020-2024</li>
  <li>Gerondelis Foundation Scholarship for Academic Excellence, 2019-2020</li>
- <li>Eurobank ``A great moment for education'' Award, 2013</li>
+ <li>Eurobank "A great moment for education" Award, 2013</li>
  </ul>
 
 
