--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <a href="/" class="title"><font size="+2">Grigoris Velegkas</font></a>
 
   <div>
-    <nav><a href="Xizhi_Tan.pdf" >CV</a></nav>
+    <nav><a href="cv_english_grigoris-22.pdf" >CV</a></nav>
   </div>
  
 </header>
 
 <article>
    <img src=
-"xizhitan.jpeg" 
+"grigoris_velegkas.jpg" 
          width="230" height="235"
          img style="float: right; padding-left: 50px;">Hello! I am a fifth yeah PhD student in the <a href="https://cpsc.yale.edu">Computer Science</a> department at Yale University. My advisor is <a href="https://aminkarbasi.github.io">Amin Karbasi</a>. 
  My research focuses on learning theory and mechanism design. In summer 2023, I was a research intern at Google Research in Mountain View, hosted by
@@ -166,7 +166,7 @@ and Policy Switches</b></li>
 
 
 <footer>
-  <nav><img src="drexel_1.png" width="170"></nav>
+  <nav><img src="yale_logo.jpg" width="170"></nav>
   
   <nav>
       <a href="https://scholar.google.com/citations?user=Ty1kgP0AAAAJ&hl=en"><i class="fa-brands fa-google"></i></a>
