--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ and Policy Switches</b></li>
 
 
 <footer>
-  <nav><img src="yale_logo.jpg" width="170"></nav>
+<!--   <nav><img src="yale_logo.jpg" width="170"></nav> -->
   
   <nav>
       <a href="https://scholar.google.com/citations?user=Ty1kgP0AAAAJ&hl=en"><i class="fa-brands fa-google"></i></a>
