--- a/index.html
+++ b/index.html
@@ -36,10 +36,26 @@
 <h1>Conference Publications</h1>
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
+
+   <li> <b>Pointwise Lipschitz Continuous Graph Algorithms via Proximal Gradient Analysis</b></li>
+  <li style="list-style-type:none">Quanquan Liu, Grigoris Velegkas, Yuichi Yoshida, Felix Zhou</li>
+  <li style="list-style-type:none"> 
+    [<b>Preprint</b>] 
+    [<a href="https://arxiv.org/abs/2405.08938">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+  <li> <b>Universal Rates for Real-Valued Regression: Separations between Cut-Off and Absolute Loss</b></li>
+  <li style="list-style-type:none">Idan Attias, Steve Hanneke, Alkis Kalavasis, Amin Karbasi,Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>COLT 2024</b>] 
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+  
     <li> <b>Replicable Learning of Large-Margin Halfspaces</b></li>
   <li style="list-style-type:none">Alkis Kalavasis, Amin Karbasi, Kasper Green Larsen, Grigoris Velegkas, Felix Zhou</li>
   <li style="list-style-type:none"> 
-    [<b>Preprint</b>] 
+    [<b>ICML 2024</b>] 
     [<a href="https://arxiv.org/abs/2402.13857">Arxiv</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
