--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ Authors are listed in alphabetical order, unless denoted by (*).
   <li style="list-style-type:none">Yang Cai, Zhe Feng, Christopher Liaw, Aranyak Mehta, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
     [<b>WWW 2024</b>] 
+     [<a href="https://dl.acm.org/doi/10.1145/3589334.3645495">WWW Proceedings</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
   
