--- a/index.html
+++ b/index.html
@@ -33,9 +33,17 @@
 <p>email: grigoris.velegkas AT yale DOT edu</p>
 
 
-<h1>Conference Publications</h1>
+<h1>Publications and Preprints</h1>
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
+
+  <li> <b>Injecting Undetectable Backdoors in Deep Learning and Language Models</b></li>
+  <li style="list-style-type:none">Alkis Kalavasis, Amin Karbasi, Argyris Oikonomou, Katerina Sotiraki, Grigoris Velegkas, Manolis Zampetakis</li>
+  <li style="list-style-type:none"> 
+    [<b>Preprint</b>] 
+    [<a href="https://arxiv.org/abs/2406.05660">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
 
    <li> <b>Pointwise Lipschitz Continuous Graph Algorithms via Proximal Gradient Analysis</b></li>
   <li style="list-style-type:none">Quanquan Liu, Grigoris Velegkas, Yuichi Yoshida, Felix Zhou</li>
@@ -45,20 +53,21 @@ Authors are listed in alphabetical order, unless denoted by (*).
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
-  <li> <b>Universal Rates for Real-Valued Regression: Separations between Cut-Off and Absolute Loss</b></li>
-  <li style="list-style-type:none">Idan Attias, Steve Hanneke, Alkis Kalavasis, Amin Karbasi,Grigoris Velegkas</li>
+  <li> <b>Universal Rates for Regression: Separations between Cut-Off and Absolute Loss</b></li>
+  <li style="list-style-type:none">Idan Attias, Steve Hanneke, Alkis Kalavasis, Amin Karbasi, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
     [<b>COLT 2024</b>] 
   </li>
   <li style="list-style-type:none">&nbsp;</li>
   
     <li> <b>Replicable Learning of Large-Margin Halfspaces</b></li>
-  <li style="list-style-type:none">Alkis Kalavasis, Amin Karbasi, Kasper Green Larsen, Grigoris Velegkas, Felix Zhou</li>
-  <li style="list-style-type:none"> 
-    [<b>ICML 2024</b>] 
-    [<a href="https://arxiv.org/abs/2402.13857">Arxiv</a>]
-  </li>
-  <li style="list-style-type:none">&nbsp;</li>
+<li style="list-style-type:none">Alkis Kalavasis, Amin Karbasi, Kasper Green Larsen, Grigoris Velegkas, Felix Zhou</li>
+<li style="list-style-type:none"> 
+  [<b>ICML 2024 (<span style="color: red;">Spotlight</span>)</b>] 
+  [<a href="https://arxiv.org/abs/2402.13857">Arxiv</a>]
+</li>
+<li style="list-style-type:none">&nbsp;</li>
+
   
   <li> <b>User Response in Ad Auctions: An MDP Formulation of Long-term Revenue Optimization</b></li>
   <li style="list-style-type:none">Yang Cai, Zhe Feng, Christopher Liaw, Aranyak Mehta, Grigoris Velegkas</li>
