--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Authors are listed in alphabetical order, unless denoted by (*).
 PAC Learning and Online Learning</b></li>
   <li style="list-style-type:none">Idan Attias, Steve Hanneke, Alkis Kalavasis, Amin Karbasi, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
-    [<b>NeurIPS 2023 (Oral Presentation)</b>] 
+    [<b>NeurIPS 2023 (<span style="color: red;">Oral Presentation</span>)</b>] 
     [<a href="https://arxiv.org/abs/2307.03848">Arxiv</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
@@ -121,7 +121,7 @@ PAC Learning and Online Learning</b></li>
   <li> <b>Universal Rates for Interactive Learning</b></li>
   <li style="list-style-type:none">Steve Hanneke, Amin Karbasi, Shay Moran, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
-    [<b>NeurIPS 2022 (Oral Presentation)</b>] 
+    [<b>NeurIPS 2022 (<span style="color: red;">Oral Presentation</span>)</b>] 
     [<a href="https://proceedings.neurips.cc/paper_files/paper/2022/file/b8362385b08348d21162310c5b4e9541-Paper-Conference.pdf">NeurIPS Proceedings</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
