--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
          img style="float: right; padding-left: 50px;">Hello! I am a fifth yeah PhD student in the <a href="https://cpsc.yale.edu">Computer Science</a> department at Yale University. My advisor is <a href="https://aminkarbasi.github.io">Amin Karbasi</a>. 
  My research focuses on learning theory and mechanism design. In summer 2023, I was a research intern at Google Research in Mountain View, hosted by
  <a href="https://www.gsb.stanford.edu/programs/phd/academic-experience/students/andres-perlroth-vitriol">Andres Perlroth</a> and  <a href="https://research.google/people/gagan-aggarwal/">Gagan Aggarwal</a>.
-  Currently, I am a student researcher at Google Research hosted by <a href="https://sites.google.com/view/yuandeng">Yuan Deng</a>.
+  From October 2023 until May 2024 I was a student researcher at Google Research hosted by <a href="https://sites.google.com/view/yuandeng">Yuan Deng</a>.
+  Currently, I am a research intern at Google Research in New York hosted by <a href="https://wwkong.github.io">William Kong</a>.
 
 <p> Before coming to Yale, I completed my undergrad studies at NTUA majoring in computer science and electrical engineering, where I worked with 
   <a href="http://www.softlab.ntua.gr/~fotakis/">Dimitris Fotakis</a>.
