--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@ Authors are listed in alphabetical order, unless denoted by (*).
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
+  <li> <b>On the Computational Landscape of Replicable Learning</b></li>
+  <li style="list-style-type:none">Alkis Kalavasis, Amin Karbasi, Grigoris Velegkas, Felix Zhou</li>
+  <li style="list-style-type:none"> 
+    [<b>Preprint</b>] 
+    [<a href="https://arxiv.org/abs/2405.15599">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
   <li> <b>Universal Rates for Regression: Separations between Cut-Off and Absolute Loss</b></li>
   <li style="list-style-type:none">Idan Attias, Steve Hanneke, Alkis Kalavasis, Amin Karbasi, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
