--- a/index.html
+++ b/index.html
@@ -54,6 +54,29 @@ Authors are listed in alphabetical order, unless denoted by (*).
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
+   <li> <b>Randomized Truthful Auctions with Learning Agents</b></li>
+  <li style="list-style-type:none">Gagan Aggarwal, Anupam Gupta, Andres Perlroth, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>Preprint (coming soon)</b>] 
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+  <li> <b>Universal Rates for Active Learning</b></li>
+  <li style="list-style-type:none">Steve Hanneke, Amin Karbasi, Shay Moran, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>Preprint (coming soon)</b>] 
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+  <li> <b>Procurement Auctions via Approximately Optimal Submodular Optimization</b></li>
+  <li style="list-style-type:none">Yuan Deng, Amin Karbasi, Vahab Mirrokni, Renato Paes Leme, Grigoris Velegkas, Song Zuo</li>
+  <li style="list-style-type:none"> 
+    [<b>Preprint (coming soon)</b>] 
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+ 
+
   <li> <b>On the Computational Landscape of Replicable Learning</b></li>
   <li style="list-style-type:none">Alkis Kalavasis, Amin Karbasi, Grigoris Velegkas, Felix Zhou</li>
   <li style="list-style-type:none"> 
