--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@ Authors are listed in alphabetical order, unless denoted by (*).
   <li> <b>Universal Rates for Regression: Separations between Cut-Off and Absolute Loss</b></li>
   <li style="list-style-type:none">Idan Attias, Steve Hanneke, Alkis Kalavasis, Amin Karbasi, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
-    [<b>COLT 2024</b>] 
+    [<b>COLT 2024</b>]
+    [<a href="https://proceedings.mlr.press/v247/attias24a.html">COLT Proceedings</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
   
