--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
 
-  <li> <b>Injecting Undetectable Backdoors in Deep Learning and Language Models</b></li>
-  <li style="list-style-type:none">Alkis Kalavasis, Amin Karbasi, Argyris Oikonomou, Katerina Sotiraki, Grigoris Velegkas, Manolis Zampetakis</li>
+    <li> <b>Procurement Auctions via Approximately Optimal Submodular Optimization</b></li>
+  <li style="list-style-type:none">Yuan Deng, Amin Karbasi, Vahab Mirrokni, Renato Paes Leme, Grigoris Velegkas, Song Zuo</li>
   <li style="list-style-type:none"> 
-    [<b>Preprint</b>] 
-    [<a href="https://arxiv.org/abs/2406.05660">Arxiv</a>]
+    [<b>Preprint (coming soon)</b>] 
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
@@ -54,24 +53,26 @@ Authors are listed in alphabetical order, unless denoted by (*).
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
+  
+  <li> <b>Injecting Undetectable Backdoors in Deep Learning and Language Models</b></li>
+  <li style="list-style-type:none">Alkis Kalavasis, Amin Karbasi, Argyris Oikonomou, Katerina Sotiraki, Grigoris Velegkas, Manolis Zampetakis</li>
+  <li style="list-style-type:none"> 
+    [<b>NeurIPS 2024</b>] 
+    [<a href="https://arxiv.org/abs/2406.05660">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
    <li> <b>Randomized Truthful Auctions with Learning Agents</b></li>
   <li style="list-style-type:none">Gagan Aggarwal, Anupam Gupta, Andres Perlroth, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
-    [<b>Preprint (coming soon)</b>] 
+    [<b>NeurIPS 2024</b>] 
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
   <li> <b>Universal Rates for Active Learning</b></li>
   <li style="list-style-type:none">Steve Hanneke, Amin Karbasi, Shay Moran, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
-    [<b>Preprint (coming soon)</b>] 
-  </li>
-  <li style="list-style-type:none">&nbsp;</li>
-
-  <li> <b>Procurement Auctions via Approximately Optimal Submodular Optimization</b></li>
-  <li style="list-style-type:none">Yuan Deng, Amin Karbasi, Vahab Mirrokni, Renato Paes Leme, Grigoris Velegkas, Song Zuo</li>
-  <li style="list-style-type:none"> 
-    [<b>Preprint (coming soon)</b>] 
+    [<b>NeurIPS 2024</b>] 
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
@@ -80,7 +81,7 @@ Authors are listed in alphabetical order, unless denoted by (*).
   <li> <b>On the Computational Landscape of Replicable Learning</b></li>
   <li style="list-style-type:none">Alkis Kalavasis, Amin Karbasi, Grigoris Velegkas, Felix Zhou</li>
   <li style="list-style-type:none"> 
-    [<b>Preprint</b>] 
+    [<b>NeurIPS 2024</b>] 
     [<a href="https://arxiv.org/abs/2405.15599">Arxiv</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
