--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="/" class="title"><font size="+2">Grigoris Velegkas</font></a>
 
   <div>
-    <nav><a href="cv_english_grigoris-22.pdf" >CV</a></nav>
+    <nav><a href="cv_grigoris_velegkas-5.pdf" >CV</a></nav>
   </div>
  
 </header>
