--- a/index.html
+++ b/index.html
@@ -38,10 +38,19 @@
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
 
+    <li> <b>On the Limits of Language Generation: Trade-Offs Between Hallucination and Mode Collapse</b></li>
+  <li style="list-style-type:none">Alkis Kalavasis, Anay Mehrotra, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>Preprint</b>] 
+    [<a href="https://arxiv.org/abs/2411.09642">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
     <li> <b>Procurement Auctions via Approximately Optimal Submodular Optimization</b></li>
   <li style="list-style-type:none">Yuan Deng, Amin Karbasi, Vahab Mirrokni, Renato Paes Leme, Grigoris Velegkas, Song Zuo</li>
   <li style="list-style-type:none"> 
-    [<b>Preprint (coming soon)</b>] 
+    [<b>Preprint</b>] 
+    [<a href="https://arxiv.org/abs/2411.13513">Arxiv</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
@@ -66,6 +75,7 @@ Authors are listed in alphabetical order, unless denoted by (*).
   <li style="list-style-type:none">Gagan Aggarwal, Anupam Gupta, Andres Perlroth, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
     [<b>NeurIPS 2024</b>] 
+    [<a href="https://arxiv.org/abs/2411.09517">Arxiv</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
@@ -73,6 +83,7 @@ Authors are listed in alphabetical order, unless denoted by (*).
   <li style="list-style-type:none">Steve Hanneke, Amin Karbasi, Shay Moran, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
     [<b>NeurIPS 2024</b>] 
+    [<a href="https://openreview.net/forum?id=T0e4Nw09XX&referrer=%5Bthe%20profile%20of%20Steve%20Hanneke%5D(%2Fprofile%3Fid%3D~Steve_Hanneke1)">NeurIPS Proceedings</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
