--- a/index.html
+++ b/index.html
@@ -46,13 +46,7 @@ Authors are listed in alphabetical order, unless denoted by (*).
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
-      <li> <b>Understanding Aggregations of Proper Learners in Multiclass Classification</b></li>
-  <li style="list-style-type:none">Julian Asilis, Mikael Møller Høgsgaard, Grigoris Velegkas</li>
-  <li style="list-style-type:none"> 
-    [<b>Preprint</b>] 
-    [<a href="https://arxiv.org/abs/2410.22749">Arxiv</a>]
-  </li>
-  <li style="list-style-type:none">&nbsp;</li>
+
 
     <li> <b>Procurement Auctions via Approximately Optimal Submodular Optimization</b></li>
   <li style="list-style-type:none">Yuan Deng, Amin Karbasi, Vahab Mirrokni, Renato Paes Leme, Grigoris Velegkas, Song Zuo</li>
@@ -67,6 +61,15 @@ Authors are listed in alphabetical order, unless denoted by (*).
   <li style="list-style-type:none"> 
     [<b>Preprint</b>] 
     [<a href="https://arxiv.org/abs/2405.08938">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+
+        <li> <b>Understanding Aggregations of Proper Learners in Multiclass Classification</b></li>
+  <li style="list-style-type:none">Julian Asilis, Mikael Møller Høgsgaard, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>ALT 2025</b>] 
+    [<a href="https://arxiv.org/abs/2410.22749">Arxiv</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
