--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
 
+  <li> <b>Characterizations of Language Generation With Breadth</b></li>
+  <li style="list-style-type:none">Alkis Kalavasis, Anay Mehrotra, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>Preprint</b>] 
+    [<a href="https://arxiv.org/abs/2412.18530">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
     <li> <b>On the Limits of Language Generation: Trade-Offs Between Hallucination and Mode Collapse</b></li>
   <li style="list-style-type:none">Alkis Kalavasis, Anay Mehrotra, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
