--- a/index.html
+++ b/index.html
@@ -34,23 +34,15 @@
 <p>email: grigoris.velegkas AT yale DOT edu</p>
 
 
-<h1>Publications and Preprints</h1>
+<h1>Preprints</h1>
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
 
-  <li> <b>Characterizations of Language Generation With Breadth</b></li>
+    <li> <b>Characterizations of Language Generation With Breadth</b></li>
   <li style="list-style-type:none">Alkis Kalavasis, Anay Mehrotra, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
     [<b>Preprint</b>] 
     [<a href="https://arxiv.org/abs/2412.18530">Arxiv</a>]
-  </li>
-  <li style="list-style-type:none">&nbsp;</li>
-
-    <li> <b>On the Limits of Language Generation: Trade-Offs Between Hallucination and Mode Collapse</b></li>
-  <li style="list-style-type:none">Alkis Kalavasis, Anay Mehrotra, Grigoris Velegkas</li>
-  <li style="list-style-type:none"> 
-    [<b>Preprint</b>] 
-    [<a href="https://arxiv.org/abs/2411.09642">Arxiv</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
@@ -69,6 +61,22 @@ Authors are listed in alphabetical order, unless denoted by (*).
   <li style="list-style-type:none"> 
     [<b>Preprint</b>] 
     [<a href="https://arxiv.org/abs/2405.08938">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+</ul>
+
+
+  
+<h1>Publications</h1>
+Authors are listed in alphabetical order, unless denoted by (*).
+<ul>
+
+  <li> <b>On the Limits of Language Generation: Trade-Offs Between Hallucination and Mode Collapse</b></li>
+  <li style="list-style-type:none">Alkis Kalavasis, Anay Mehrotra, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+     [<b>STOC 2025</b>] 
+    [<a href="https://arxiv.org/abs/2411.09642">Arxiv</a>]
   </li>
   <li style="list-style-type:none">&nbsp;</li>
 
