--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
 
+    <li> <b>(Im)possibility of Automated Hallucination Detection in Large Language Models
+</b></li>
+  <li style="list-style-type:none"> Amin Karbasi, Omar Montasser, John Sous, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>Preprint</b>] 
+    [<a href="https://arxiv.org/abs/2504.17004">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+    <li> <b>On Agnostic PAC Learning in the Small Error Regime</b></li>
+  <li style="list-style-type:none">Julian Asilis, Mikael Møller Høgsgaard, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>Preprint</b>] 
+    [<a href="https://arxiv.org/abs/2502.09496">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
     <li> <b>Characterizations of Language Generation With Breadth</b></li>
   <li style="list-style-type:none">Alkis Kalavasis, Anay Mehrotra, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
