--- a/index.html
+++ b/index.html
@@ -65,14 +65,6 @@ Authors are listed in alphabetical order, unless denoted by (*).
 
 
 
-    <li> <b>Procurement Auctions via Approximately Optimal Submodular Optimization</b></li>
-  <li style="list-style-type:none">Yuan Deng, Amin Karbasi, Vahab Mirrokni, Renato Paes Leme, Grigoris Velegkas, Song Zuo</li>
-  <li style="list-style-type:none"> 
-    [<b>Preprint</b>] 
-    [<a href="https://arxiv.org/abs/2411.13513">Arxiv</a>]
-  </li>
-  <li style="list-style-type:none">&nbsp;</li>
-
    <li> <b>Pointwise Lipschitz Continuous Graph Algorithms via Proximal Gradient Analysis</b></li>
   <li style="list-style-type:none">Quanquan Liu, Grigoris Velegkas, Yuichi Yoshida, Felix Zhou</li>
   <li style="list-style-type:none"> 
@@ -88,6 +80,14 @@ Authors are listed in alphabetical order, unless denoted by (*).
 <h1>Publications</h1>
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
+
+  <li> <b>Procurement Auctions via Approximately Optimal Submodular Optimization</b></li>
+  <li style="list-style-type:none">Yuan Deng, Amin Karbasi, Vahab Mirrokni, Renato Paes Leme, Grigoris Velegkas, Song Zuo</li>
+  <li style="list-style-type:none"> 
+    [<b>ICML 2025 (<span style="color: red;">Spotlight</span>)</b>] 
+    [<a href="https://arxiv.org/abs/2411.13513">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
 
   <li> <b>On the Limits of Language Generation: Trade-Offs Between Hallucination and Mode Collapse</b></li>
   <li style="list-style-type:none">Alkis Kalavasis, Anay Mehrotra, Grigoris Velegkas</li>
