--- a/index.html
+++ b/index.html
@@ -38,14 +38,7 @@
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
 
-    <li> <b>(Im)possibility of Automated Hallucination Detection in Large Language Models
-</b></li>
-  <li style="list-style-type:none"> Amin Karbasi, Omar Montasser, John Sous, Grigoris Velegkas</li>
-  <li style="list-style-type:none"> 
-    [<b>Preprint</b>] 
-    [<a href="https://arxiv.org/abs/2504.17004">Arxiv</a>]
-  </li>
-  <li style="list-style-type:none">&nbsp;</li>
+    
 
     <li> <b>On Agnostic PAC Learning in the Small Error Regime</b></li>
   <li style="list-style-type:none">Julian Asilis, Mikael Møller Høgsgaard, Grigoris Velegkas</li>
@@ -80,6 +73,15 @@ Authors are listed in alphabetical order, unless denoted by (*).
 <h1>Publications</h1>
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
+
+  <li> <b>(Im)possibility of Automated Hallucination Detection in Large Language Models
+</b></li>
+  <li style="list-style-type:none"> Amin Karbasi, Omar Montasser, John Sous, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>COLM 2025</b>] 
+    [<a href="https://arxiv.org/abs/2504.17004">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
 
   <li> <b>Procurement Auctions via Approximately Optimal Submodular Optimization</b></li>
   <li style="list-style-type:none">Yuan Deng, Amin Karbasi, Vahab Mirrokni, Renato Paes Leme, Grigoris Velegkas, Song Zuo</li>
