--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
 
-    
+  <li> <b>On Union-Closedness of Language Generation</b></li>
+  <li style="list-style-type:none">Steve Hanneke, Amin Karbasi, Anay Mehrotra, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>Preprint</b>] 
+    [<a href="https://arxiv.org/abs/2506.18642">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>  
 
+
+  
     <li> <b>On Agnostic PAC Learning in the Small Error Regime</b></li>
   <li style="list-style-type:none">Julian Asilis, Mikael Møller Høgsgaard, Grigoris Velegkas</li>
   <li style="list-style-type:none"> 
