--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <img src=
 "grigoris_velegkas.jpg" 
          width="230" height="235"
-         img style="float: right; padding-left: 50px;">Hello! I am a final year PhD student in the <a href="https://cpsc.yale.edu">Computer Science</a> department at Yale University. My advisor is <a href="https://aminkarbasi.github.io">Amin Karbasi</a>. 
+         img style="float: right; padding-left: 50px;">Hello! I am a Research Scientist at Google Research in Mountain View. I received my PhD in Computer Science from Yale University. My advisor was <a href="https://aminkarbasi.github.io">Amin Karbasi</a>. 
  My research focuses on learning theory and mechanism design. In summer 2023, I was a research intern at Google Research in Mountain View, hosted by
  <a href="https://www.gsb.stanford.edu/programs/phd/academic-experience/students/andres-perlroth-vitriol">Andres Perlroth</a> and  <a href="https://research.google/people/gagan-aggarwal/">Gagan Aggarwal</a>.
   From October 2023 until May 2024 I was a student researcher at Google Research hosted by <a href="https://sites.google.com/view/yuandeng">Yuan Deng</a>.
@@ -31,30 +31,12 @@
   <a href="http://www.softlab.ntua.gr/~fotakis/">Dimitris Fotakis</a>.
 </p>
 
-<p>email: grigoris.velegkas AT yale DOT edu</p>
+<p>email: gvelegkas41 AT gmail DOT com</p>
 
 
 <h1>Preprints</h1>
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
-
-  <li> <b>On Union-Closedness of Language Generation</b></li>
-  <li style="list-style-type:none">Steve Hanneke, Amin Karbasi, Anay Mehrotra, Grigoris Velegkas</li>
-  <li style="list-style-type:none"> 
-    [<b>Preprint</b>] 
-    [<a href="https://arxiv.org/abs/2506.18642">Arxiv</a>]
-  </li>
-  <li style="list-style-type:none">&nbsp;</li>  
-
-
-  
-    <li> <b>On Agnostic PAC Learning in the Small Error Regime</b></li>
-  <li style="list-style-type:none">Julian Asilis, Mikael Møller Høgsgaard, Grigoris Velegkas</li>
-  <li style="list-style-type:none"> 
-    [<b>Preprint</b>] 
-    [<a href="https://arxiv.org/abs/2502.09496">Arxiv</a>]
-  </li>
-  <li style="list-style-type:none">&nbsp;</li>
 
     <li> <b>Characterizations of Language Generation With Breadth</b></li>
   <li style="list-style-type:none">Alkis Kalavasis, Anay Mehrotra, Grigoris Velegkas</li>
@@ -81,6 +63,22 @@ Authors are listed in alphabetical order, unless denoted by (*).
 <h1>Publications</h1>
 Authors are listed in alphabetical order, unless denoted by (*).
 <ul>
+
+      <li> <b>On Agnostic PAC Learning in the Small Error Regime</b></li>
+  <li style="list-style-type:none">Julian Asilis, Mikael Møller Høgsgaard, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>NeurIPS 2025 (<span style="color: red;">Spotlight</span>)</b>] 
+    [<a href="https://arxiv.org/abs/2502.09496">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>
+
+    <li> <b>On Union-Closedness of Language Generation</b></li>
+  <li style="list-style-type:none">Steve Hanneke, Amin Karbasi, Anay Mehrotra, Grigoris Velegkas</li>
+  <li style="list-style-type:none"> 
+    [<b>NeurIPS 2025</b>] 
+    [<a href="https://arxiv.org/abs/2506.18642">Arxiv</a>]
+  </li>
+  <li style="list-style-type:none">&nbsp;</li>  
 
   <li> <b>(Im)possibility of Automated Hallucination Detection in Large Language Models
 </b></li>
